--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   
   .alert { background-color: #d90429; color: white; text-align: center; padding: 12px; font-weight: bold; font-size: 16px; border-bottom: 4px solid #a4133c; }
   .date-header { background-color: #333; color: #fff; padding: 10px 20px; font-weight: bold; font-size: 15px; text-transform: uppercase; margin-top: 20px; }
-  .category-header { background-color: #f8f9fa; color: #555; padding: 8px 20px; font-weight: bold; font-size: 13px; text-transform: uppercase; border-left: 4px solid #000; margin-top: 10px; }
-  
   .content { padding: 20px; }
   
-  table { width: 100%; border-collapse: collapse; margin-bottom: 5px; }
+  table { width: 100%; border-collapse: collapse; margin-bottom: 10px; }
   th { background-color: #f2f2f2; text-align: left; padding: 10px; border-bottom: 2px solid #333; font-size: 12px; text-transform: uppercase; }
   td { padding: 8px 10px; border-bottom: 1px solid #eee; font-size: 13px; }
   
@@ -32,6 +30,7 @@
 
   @media screen and (max-width: 600px) {
     .cta-grid { grid-template-columns: 1fr; }
+    .header h1 { font-size: 20px; }
     th { font-size: 10px; }
     td { font-size: 11px; }
   }
@@ -41,8 +40,8 @@
 
   <div class="container">
     <div class="header">
-      <h1>MUCH FLOWERS - MIAMI STOCK</h1>
-      <p>Professional Floral Distribution | Fresh Inventory Update</p>
+      <h1>MIAMI INVENTORY ✈️✈️</h1>
+      <p>Professional Floral Distribution | Fresh Stock Update</p>
     </div>
 
     <div class="alert">⚡ READY FOR PICKUP & DELIVERY IN MIAMI ⚡</div>
@@ -60,66 +59,46 @@
           </tr>
         </thead>
         <tbody>
+          <tr><td class="qty-col">1 QB</td><td>160ST</td><td>ALSTRO SUPREME HOT PINK 85CM</td><td class="price-col">$0.43</td></tr>
           <tr><td class="qty-col">1 QB</td><td>100ST</td><td>CHRYSANTHEMUM ROSSANO 70CM ORANGE</td><td class="price-col">$0.75</td></tr>
           <tr><td class="qty-col">2 QB</td><td>100ST</td><td>CHRYSANTHEMUM TESTAROSA 70CM</td><td class="price-col">$0.75</td></tr>
-          <tr><td class="qty-col">2 QB</td><td>180ST</td><td>LYSIMACHIA 60CM WHITE</td><td class="price-col">$0.53</td></tr>
-          <tr><td class="qty-col">1 QB</td><td>160ST</td><td>ALSTRO SUPREME HOT PINK 85CM</td><td class="price-col">$0.63</td></tr>
-          <tr><td class="qty-col">2 QB</td><td>140ST</td><td>BUPLEURUM 80CM GREEN</td><td class="price-col">$0.48</td></tr>
-        </tbody>
-      </table>
-
-      <div class="date-header">Arriving Jan 30th</div>
-
-      <div class="category-header">Gypso</div>
-      <table>
-        <tbody>
-          <tr><td style="width: 10%;" class="qty-col">23 QB</td><td style="width: 15%;">140ST</td><td style="width: 60%;">GYPSOPHILA GRANDTASTIC 250GR WHITE</td><td style="width: 15%;" class="price-col">$0.45</td></tr>
-          <tr><td class="qty-col">21 QB</td><td>140ST</td><td>GYPSOPHILA XLENCE 250GR WHITE</td><td class="price-col">$0.45</td></tr>
-        </tbody>
-      </table>
-
-      <div class="category-header">Roses & Spray Roses</div>
-      <table>
-        <tbody>
-          <tr><td style="width: 10%;" class="qty-col">1 QB</td><td style="width: 15%;">100ST</td><td style="width: 60%;">ROSE CANDY XPRESSION 60CM</td><td style="width: 15%;" class="price-col">$1.10</td></tr>
+          <tr><td class="qty-col">1 QB</td><td>180ST</td><td>LYSIMACHIA 60CM WHITE</td><td class="price-col">$0.53</td></tr>
+          <tr><td class="qty-col">1 QB</td><td>100ST</td><td>ROSE CANDY XPRESSION 60CM</td><td class="price-col">$1.10</td></tr>
           <tr><td class="qty-col">1 QB</td><td>100ST</td><td>ROSE CANDY XPRESSION 70CM</td><td class="price-col">$1.21</td></tr>
-          <tr class="highlight-red"><td class="qty-col">3 QB</td><td>100ST</td><td>ROSE EXPLORER 50CM RED</td><td class="price-col">$1.26</td></tr>
-          <tr class="highlight-red"><td class="qty-col">5 QB</td><td>100ST</td><td>ROSE EXPLORER 60CM RED</td><td class="price-col">$1.36</td></tr>
-          <tr class="highlight-red"><td class="qty-col">3 QB</td><td>100ST</td><td>ROSE EXPLORER 70CM RED</td><td class="price-col">$1.46</td></tr>
+          <tr><td class="qty-col">1 QB</td><td>120ST</td><td>SCABIOSAS FOCAL LAVENDER OPEN CUT 60CM</td><td class="price-col">$0.71</td></tr>
+          <tr><td class="qty-col">1 QB</td><td>120ST</td><td>SPRAY ROSES PINK MAJOLICA 60CM PINK</td><td class="price-col">$0.94</td></tr>
+        </tbody>
+      </table>
+
+      <div class="date-header">Arriving Miami on Jan 30th</div>
+      <table>
+        <tbody>
+          <tr><td style="width: 10%;" class="qty-col">16 QB</td><td style="width: 15%;">120ST</td><td style="width: 60%;">ALSTROEMERIA SUPER SELECT VDAY PACK 80CM ASST</td><td style="width: 15%;" class="price-col">$0.54</td></tr>
+          <tr><td class="qty-col">5 QB</td><td>300ST</td><td>CRASPEDIA BILLY BALLS 70CM YELLOW</td><td class="price-col">$0.37</td></tr>
+          <tr><td class="qty-col">21 QB</td><td>140ST</td><td>GYPSOPHILA GRANDTASTIC 250GR WHITE</td><td class="price-col">$0.45</td></tr>
+          <tr><td class="qty-col">21 QB</td><td>140ST</td><td>GYPSOPHILA XLENCE 250GR WHITE</td><td class="price-col">$0.45</td></tr>
+          <tr><td class="qty-col">5 QB</td><td>160ST</td><td>HYPERICUM SUPER 60CM BURGUNDY</td><td class="price-col">$0.41</td></tr>
+          <tr><td class="qty-col">5 QB</td><td>160ST</td><td>HYPERICUM SUPER 60CM PINK</td><td class="price-col">$0.41</td></tr>
+          <tr><td class="qty-col">22 QB</td><td>160ST</td><td>HYPERICUM SUPER 60CM RED</td><td class="price-col">$0.41</td></tr>
+          
+          <tr class="highlight-red"><td class="qty-col">7 QB</td><td>100ST</td><td>ROSE EXPLORER 50CM RED</td><td class="price-col">$1.26</td></tr>
+          <tr class="highlight-red"><td class="qty-col">18 QB</td><td>100ST</td><td>ROSE EXPLORER 60CM RED</td><td class="price-col">$1.36</td></tr>
+          <tr class="highlight-red"><td class="qty-col">7 QB</td><td>100ST</td><td>ROSE EXPLORER 70CM RED</td><td class="price-col">$1.46</td></tr>
           <tr class="highlight-red"><td class="qty-col">2 QB</td><td>100ST</td><td>ROSE FREEDOM 70CM RED</td><td class="price-col">$1.41</td></tr>
-          <tr><td class="qty-col">1 QB</td><td>100ST</td><td>ROSE HOT EXPLORER 60CM</td><td class="price-col">$1.06</td></tr>
+          
           <tr><td class="qty-col">4 QB</td><td>100ST</td><td>ROSE HOT EXPLORER 70CM</td><td class="price-col">$1.16</td></tr>
           <tr><td class="qty-col">2 QB</td><td>100ST</td><td>ROSE MONDIAL 50CM WHITE</td><td class="price-col">$0.76</td></tr>
           <tr><td class="qty-col">6 QB</td><td>100ST</td><td>ROSE MONDIAL 60CM WHITE</td><td class="price-col">$0.86</td></tr>
           <tr><td class="qty-col">2 QB</td><td>100ST</td><td>ROSE MOODY BLUES 50CM LAVENDER</td><td class="price-col">$0.91</td></tr>
           <tr><td class="qty-col">2 QB</td><td>100ST</td><td>ROSE PLAYA BLANCA 60CM WHITE</td><td class="price-col">$1.06</td></tr>
-          <tr><td class="qty-col">1 QB</td><td>120ST</td><td>SPRAY ROSES PINK MAJOLICA 60CM PINK</td><td class="price-col">$0.94</td></tr>
         </tbody>
       </table>
 
-      <div class="category-header">Alstroemeria</div>
+      <div class="date-header">Arriving Miami on Jan 31st</div>
       <table>
         <tbody>
-          <tr><td style="width: 10%;" class="qty-col">25 QB</td><td style="width: 15%;">120ST</td><td style="width: 60%;">ALSTROEMERIA SUPER SELECT VDAY PACK 80CM ASST</td><td style="width: 15%;" class="price-col">$0.54</td></tr>
-        </tbody>
-      </table>
-
-      <div class="category-header">Premium Products</div>
-      <table>
-        <tbody>
-          <tr><td style="width: 10%;" class="qty-col">1 QB</td><td style="width: 15%;">120ST</td><td style="width: 60%;">SCABIOSAS FOCAL LAVENDER OPEN CUT 60CM</td><td style="width: 15%;" class="price-col">$0.71</td></tr>
-          <tr><td class="qty-col">5 QB</td><td>300ST</td><td>CRASPEDIA BILLY BALLS 70CM YELLOW</td><td class="price-col">$0.37</td></tr>
-          <tr><td class="qty-col">5 QB</td><td>160ST</td><td>HYPERICUM SUPER 60CM BURGUNDY</td><td class="price-col">$0.41</td></tr>
-          <tr><td class="qty-col">5 QB</td><td>160ST</td><td>HYPERICUM SUPER 60CM PINK</td><td class="price-col">$0.41</td></tr>
-          <tr><td class="qty-col">22 QB</td><td>160ST</td><td>HYPERICUM SUPER 60CM RED</td><td class="price-col">$0.41</td></tr>
-        </tbody>
-      </table>
-
-      <div class="category-header">Handtied Bouquets</div>
-      <table>
-        <tbody>
-          <tr><td style="width: 10%;" class="qty-col">3 QB</td><td style="width: 15%;">12BU</td><td style="width: 60%;">BOUQUET MESSY VDAY 50CM X15ST</td><td style="width: 15%;" class="price-col">$8.19</td></tr>
-          <tr><td class="qty-col">3 QB</td><td>12BU</td><td>BOUQUET VDAY FEELING 40CM X 15ST</td><td class="price-col">$8.03</td></tr>
+          <tr><td style="width: 10%;" class="qty-col">3 QB</td><td style="width: 15%;">12 BU</td><td style="width: 60%;">BOUQUET MESSY VDAY 50CM X15ST</td><td style="width: 15%;" class="price-col">$8.19</td></tr>
+          <tr><td class="qty-col">3 QB</td><td>12 BU</td><td>BOUQUET VDAY FEELING 40CM X 15ST</td><td class="price-col">$8.03</td></tr>
         </tbody>
       </table>
 
@@ -135,7 +114,7 @@
 
     <div class="footer">
       <p>Much Flowers Miami | Professional Floral Distribution</p>
-      <p>First come, first served. Prices valid only while stock lasts.</p>
+      <p>Stock moves quickly. Click any agent's name to order via WhatsApp.</p>
     </div>
   </div>
 
